--- a/tests/test_data/template_model/jetto.in
+++ b/tests/test_data/template_model/jetto.in
@@ -3,16 +3,16 @@
 ================================================================================
 
 Application                    : JETTO
-JAMS Version                   : v210921_gateway_v9
-Date                           : 04/10/2022
-Time                           : 13:34:04
+JAMS Version                   : v210921_gateway_imas
+Date                           : 30/06/2022
+Time                           : 13:25:13
 
 JAMS GIT information:-
 
-Current GIT repository         : /pfs/work/g2fkoech/cmg/jams/v210921_gateway_v9/java
+Current GIT repository         : /pfs/work/g2fkoech/cmg/jams/v210921_gateway_imas/java
 Current GIT release tag        : Release-v210921
-Current GIT branch             : develop
-Last commit SHA1-key           : e3c394bb49496516b7c6d7cb404520a0591ca661
+Current GIT branch             : fkochl/v210921_addons_31
+Last commit SHA1-key           : 3a4347b10268c12acc42ea7ac6e32692b102b84c
 Repository status              : Clean
 
 
@@ -21,96 +21,62 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST1
-  BCINTRHON=  0.95     ,
-  BCINTRHONSANCO=  0.95     ,
-  CECON    =  1.0      ,  1.0      ,  1.0      ,
-  CLHON    =  0.0      ,  5.0E-4   ,  5.0E-4   ,  0.0      ,  2.5E-4   ,
-              2.5E-4   ,  0.0      ,  0.0      ,
+  BCINTRHONSANCO=  0.001    ,
+  BTIN     =  3.0      ,  3.0      ,
   CTOTEBW  =  +1.0     ,
-  CTOTEC   =  +1.0     ,
+  CTOTEC   =  0.0      ,
   CTOTLH   =  +1.0     ,
-  CURTI    =  0.0      ,  0.0      ,
-  DNHB1    =  9.9999998E12,  9.9999998E12,
   DTEC     =  0.0      ,
   DTMAX    =  0.001    ,
-  DTMIN    =  1.0E-12  ,
-  DTSAW    =  1.0      ,
-  FRFTOE   =  0.5      ,  0.5      ,  0.5      ,  0.5      ,  0.5      ,
-  FTOERF   =  1.0      ,
-  IBTSIGN  =  1        ,
+  DTMIN    =  1e-12    ,
+  FTOERF   =  -1.0     ,
   ICURB    =  0        ,
   IDEBUG   =  100      ,
-  IDNHB1   =  0        ,
   IEQUOP   =  3        ,
-  IEXMOM   =  0        ,
-  IEXNE    =  1        ,  0        ,
-  IEXPRA   =  0        ,
+  IEXMOM   =  2        ,
+  IEXNE    =  2        ,  0        ,
   IEXPV    =  0        ,
   IEXQ     =  2        ,
-  IEXTE    =  1        ,
-  IEXTI    =  1        ,
+  IEXTE    =  2        ,
+  IEXTI    =  2        ,
   IEXZEF   =  -2       ,
-  IFSOLVE  =  0        ,
-  IPPFEQ   =  5        ,
+  IFSOLVE  =  1        ,
   IRESTR   =  0        ,
   IRESTW   =  1        ,
-  ISPLITSANCOT=  350      ,
-  ISWCON   =  0        ,
+  ISWCON   =  2        ,
   ISWEBW   =  0        ,
   ISWEC    =  0        ,
-  ISWEQU   =  5        ,
+  ISWEQU   =  6        ,
   ISWFBC   =  0        ,
   ISWLH    =  0        ,
   ISWNI    =  0        ,
   ISWPI    =  0        ,
   ISWRF    =  0        ,
-  ITEB     =  0        ,
-  ITIB     =  0        ,
-  ITORM    =  0        ,
-  IUPDPSI  =  0        ,
-  MACHID   =  'aug'    ,
+  ITORM    =  1        ,
+  IUPDPSI  =  1        ,
+  IVOLCORR =  0        ,
+  MACHID   =  'jet'    ,
+  NBTIN    =  2        ,
   NCRASH   =  0        ,
-  NCUR     =  2        ,
-  NDNHB1   =  2        ,
+  NCUR     =  0        ,
   NDTMAX   =  2        ,
-  NGRID    =  51       ,
+  NGRID    =  101      ,
   NPELIN   =  0        ,
   NSYNC    =  0        ,
-  NTEB     =  2        ,
   NTEBW    =  0        ,
   NTEC     =  0        ,
-  NTIB     =  2        ,
   NTLH     =  0        ,
-  NTPRAD   =  0        ,
-  NTRF     =  5        ,
+  NTRF     =  0        ,
   PDTMAX   =  1.0      ,  1.0      ,
-  PECON    =  20.0     ,  20.0     ,  20.0     ,
-  PLHON    =  0.0      ,  0.001    ,  0.001    ,  0.0      ,  5.0E-4   ,
-              5.0E-4   ,  0.0      ,  0.0      ,
-  PPRAD    =  0.06     ,  0.48     ,  1.17     ,  1.78     ,  4.2      ,
-              5.5      ,  23.0     ,  23.0     ,
-  PRAD     =  1.0      ,
-  PRFON    =  0.0      ,  20.0     ,  20.0     ,  20.0     ,  20.0     ,
   PTOTEBW  =  -1.0     ,
-  PTOTEC   =  -1.0     ,
+  PTOTEC   =  0.0      ,
   PTOTLH   =  -1.0     ,
-  RFINPO   =  1000000.0,
-  TBEG     =  5.25     ,
-  TCRASH   =  35.0     ,  700.0    ,
-  TDNHB1   =  0.0      ,  1000.0   ,
+  RFINPO   =  -1.0     ,
+  RMJ      =  306      ,
+  TBEG     =  45.75    ,
+  TBTIN    =  0.0      ,  1000.0   ,
   TDTMAX   =  0.0      ,  1000.0   ,
-  TEB      =  100.0    ,  100.0    ,
-  TECON    =  80.0     ,  80.1     ,  639.0    ,
-  TIB      =  200.0    ,  200.0    ,
-  TIMEC    =  0.0      ,  1000.0   ,
-  TLHON    =  41.0     ,  41.5     ,  41.9     ,  42.0     ,  42.1     ,
-              44.0     ,  44.1     ,  52.0     ,
-  TMAX     =  6.25     ,
-  TPRAD    =  1.3      ,  20.4     ,  39.4     ,  50.2     ,  80.0     ,
-              100.0    ,  160.0    ,  530.0    ,
-  TRFON    =  60.0     ,  60.1     ,  85.0     ,  85.5     ,  639.0    ,
-  TTEB     =  0.0      ,  1000.0   ,
-  TTIB     =  0.0      ,  1000.0   ,
+  TMAX     =  45.76    ,
  &END
 
 
@@ -121,20 +87,11 @@ Repository status              : Clean
  &NLIST2
   ISYNTHDIAG=  0        ,
   ITOUT    =  1        ,
-  KWFRAN   =  2        ,
+  KWFRAN   =  0        ,
   KWMAIN   =  1        ,
-  NTINT    =  50       ,
-  NTPR     =  48       ,
-  TPRINT   =  5.270408 ,  5.2908163,  5.3112245,  5.3316326,  5.352041 ,
-              5.372449 ,  5.392857 ,  5.413265 ,  5.4336734,  5.4540815,
-              5.4744897,  5.494898 ,  5.515306 ,  5.535714 ,  5.5561223,
-              5.5765305,  5.5969386,  5.617347 ,  5.637755 ,  5.658163 ,
-              5.678571 ,  5.6989794,  5.719388 ,  5.7397957,  5.7602043,
-              5.780612 ,  5.8010206,  5.821429 ,  5.841837 ,  5.862245 ,
-              5.882653 ,  5.9030614,  5.9234695,  5.9438777,  5.964286 ,
-              5.984694 ,  6.005102 ,  6.0255103,  6.0459185,  6.0663266,
-              6.086735 ,  6.107143 ,  6.127551 ,  6.147959 ,  6.1683674,
-              6.1887755,  6.2091837,  6.229592 ,
+  NTINT    =  5        ,
+  NTPR     =  3        ,
+  TPRINT   =  45.7525  ,  45.754997,  45.7575  ,
  &END
 
 
@@ -143,19 +100,17 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST3
-  ACHIEBM  =  0.001    ,
-  ACHIIBM  =  0.001    ,
-  ADPBM    =  0.001    ,
-  ALFINW   =  0.0      ,  0.0      ,
-  ALFP     =  1.0      ,  1.0      ,
-  ASI      =  1e6      ,
+  ACHIEBM  =           ,
+  ACHIIBM  =           ,
+  ADPBM    =           ,
+  ALFINW   =  0.0      ,  0.0      ,  0.0      ,
   BARMIC   =  1.0E-04  ,
   BARMID   =  1.0E-04  ,  1.0E-04  ,
   BARMUL   =  0.0      ,
   BARWIT   =  0.0      ,
   CBOH     =  0.0      ,
   CBOOC    =  1.0      ,
-  CHIEMI   =  3.0E-3   ,
+  CHIEMI   =  0.003    ,
   CHIMNEO  =  0.0      ,
   CLAMBD   =  1.5      ,
   C_ALPHA_E=  0.0      ,
@@ -165,14 +120,13 @@ Repository status              : Clean
   C_SH_E   =  0.0      ,
   C_SH_I   =  0.0      ,
   DELJR    =  0.0      ,
-  DIFMI    =  3.0E-3   ,  0.0      ,
-  FORMD    =  5000.0   ,  0.0      ,  0.15     ,
-  FORME    =  5000.0   ,  0.0      ,  0.15     ,
-  FORMI    =  5000.0   ,  0.0      ,  0.15     ,
-  FORMM    =  0.0      ,  0.0      ,  0.0      ,
+  DIFMI    =  0.003    ,  0.0      ,
+  FORMD    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  FORME    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  FORMI    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  FORMM    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
   IBAR     =  0        ,
   IBARTM   =  1        ,
-  IBOHMOLD =  1        ,
   ICGTM    =  0        ,
   ICPTM    =  0        ,
   IEITB    =  0        ,
@@ -182,21 +136,19 @@ Repository status              : Clean
   IETBI    =  0        ,
   IETBM    =  0        ,
   IFORMD   =  0        ,
-  IFORME   =  2        ,
+  IFORME   =  0        ,
   IFORMI   =  0        ,
   IFORMM   =  0        ,
-  IGLF23SMSIGNCONS=  1        ,
   IGLFMOD  =  0        ,
   IGTM     =  0        ,
   IIITB    =  0        ,
   IIITBG   =  0        ,
   IITM     =  0        ,
-  IJTM     =  1        ,  1        ,  1        ,  1        ,  0        ,
+  IJTM     =  0        ,  0        ,  0        ,  1        ,  0        ,
               0        ,
   INEOCL   =  1        ,
   IONMIX   =  1        ,
   IOPTAL   =  4        ,
-  IQTM     =  1        ,
   IREXB    =  0        ,
   IRSMP    =  0        ,
   IRSMT    =  0        ,
@@ -205,7 +157,6 @@ Repository status              : Clean
   ISAW     =  0        ,
   ISAWTRG  =  0        ,
   ISINK    =  0        ,
-  ITRDOWNSC=  25       ,
   ITRGLFAL =  1        ,
   ITRGLFEB =  -1       ,
   ITRGLFSET=  1        ,
@@ -217,12 +168,6 @@ Repository status              : Clean
   ITRGSIM  =  1        ,
   ITRGSIMD =  0        ,
   ITRGSIMT =  1        ,
-  ITRJM    =  1        ,
-  ITRTGLFSAT=  2        ,
-  ITRTGLFSIM=  0        ,
-  ITRTGLFSIMD=  0        ,
-  ITRTGLFSIMT=  1        ,
-  ITRTGLFSM=  3        ,
   ITRWBALL =  0        ,
   ITRWCOLL =  0        ,
   ITRWEB   =  0        ,
@@ -256,19 +201,15 @@ Repository status              : Clean
   REDGE    =  1.0      ,  1.0      ,
   RITG     =  1.0      ,  1.0      ,
   RMIN1    =  0.0      ,
-  RNORMC   =  2.88     ,
-  RNORME   =  2.88     ,
+  RNORMC   =  0.0      ,
+  RNORME   =  0.0      ,
   RTEM     =  1.0      ,  1.0      ,
-  SMOOTH   =  4.0      ,
+  SMOOTH   =  0.0      ,
   TLH      =  0.0      ,
   TRGOMD   =  1.0      ,
   TRGOMT   =  0.75     ,
   TRGSIMD  =  1.0      ,
   TRGSIMT  =  0.75     ,
-  TRJM     =  1.0      ,
-  TRMAXD   =  10.0e4   ,
-  TRTGLFSIMD=  1.0      ,
-  TRTGLFSIMT=  1.0      ,
   TRWLAMD  =  0.0      ,
   TRWOMD   =  1.0      ,
   TRWOMT   =  1.0      ,
@@ -279,16 +220,8 @@ Repository status              : Clean
   WDP2     =  0.3      ,  0.3      ,
   WELEC    =  0        ,
   WLAMD    =  0        ,
-  XEBOHM   =  0.1      ,
-  XECDBM   =  0.0      ,
-  XEGBOHM  =  0.1      ,
-  XENEOAL  =  0.0      ,
-  XIBOHM   =  0.1      ,
-  XICDBM   =  0.0      ,
-  XIGBOHM  =  0.1      ,
-  XINEOAL  =  0.0      ,
   XINEOCL  =  1.0      ,
-  ZDEL     =  0.30     ,
+  ZDEL     =           ,
   ZFRCONN  =  1.0      ,
  &END
 
@@ -298,39 +231,32 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST4
-  ALFI     =  1.0      ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  ALFI     =  1.0      ,  0.05     ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
   ATM      =  2.0      ,
-  ATMI     =  12       ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  ATMI     =  9        ,  58       ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
-  DNEFLFB  =  0.9e19   ,
   DNFRAC   =  1.0      ,
-  EWALLN   =  100.0    ,
-  FNEFLFB  =  0.05     ,
-  IFLFB    =  3        ,
-  IFRANT   =  1        ,
+  EWALLN   =  0.0      ,
+  ICOOR    =  4        ,
+  IFRANT   =  0        ,
   IRECY    =  1        ,
-  ISWFUS   =  1        ,
-  KWWRR    =  2        ,
-  NBREMS   =  1        ,
-  NENE     =  1        ,
-  NIMP     =  -1       ,
+  ISWFUS   =  0        ,
+  KSANST   =  1        ,
+  NBREMS   =  0        ,
+  NENE     =  0        ,
+  NIMP     =  2        ,
   NISH     =  1        ,
-  NSKWRR   =  20       ,
-  NTFLON   =  -3       ,
+  NSKWRR   =  0        ,
+  NTFLON   =  0        ,
   NTRECY   =  0        ,
-  NTZEFF   =  0        ,
-  PFLFB    =  4.49999991E15,  0.0      ,
-  PZEFF    =  3.17     ,  2.49     ,  2.0      ,  1.8      ,  1.7      ,
-              1.758    ,  1.762    ,  1.728    ,  2.94     ,  3.68     ,
-  RECYC    =  1.0D-06  ,  1.0D-06  ,  1.0D-06  ,  1.0D-06  ,
-  RFINE    =  5.0      ,
-  TFLON    =  5.25     ,
-  TZEFF    =  7.35     ,  10.0     ,  20.0     ,  30.0     ,  80.0     ,
-              144.0    ,  521.8    ,  650.0    ,  670.0    ,  695.0    ,
-  WI       =  13.8     ,
+  NZEQ     =  4        ,  12       ,  0        ,  0        ,  0        ,
+              0        ,  0        ,
+  RECYC    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  RFINE    =  0.0      ,
+  WI       =  0.0      ,
   ZEFF     =  -1.0     ,
-  ZIPI     =  6        ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  ZIPI     =  4        ,  28       ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
  &END
 
@@ -340,9 +266,18 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &INESCO
-  NEQU     =  3        ,
-  NPULSE   =  36982    ,
-  TIMEQU   =  2.85     ,  3.175    ,  3.5      ,
+  BAVT     =  0.985    ,
+  FPFASN   =  1.0      ,
+  IBNDJ    =  81       ,
+  K6EQU    =  4        ,
+  KBORET   =  0        ,
+  KCPROF   =  0        ,
+  KCURT    =  1000     ,
+  NEQU     =  -2       ,
+  NITEQ    =  300      ,
+  NL       =  62       ,
+  NPULSE   =  90350    ,
+  TIMEQU   =  45.75    ,  45.76    ,  1.0E30   ,
  &END
 
 
@@ -427,18 +362,11 @@ Repository status              : Clean
   ANTTYP   =  'ITER'   ,
   JS2PS    =  300      ,
   NANT     =  1        ,
-  NEWCHA   =  2.0      ,
-  NEWCNS   =  0.01     ,
-  NEWMAS   =  3.0      ,
-  NRPOLY   =  2        ,
-  NRUNT    =  1        ,
+  NRPOLY   =  0        ,
+  NRUNT    =  0        ,
   NSTRAP   =  4        ,
-  RFFREQ   =  5.3E7    ,
+  RFFREQ   =  0.0      ,
   RFPHAS   =  'OppO'   ,
-  RFPOWR   =  7000000.0,  7000000.0,
-  RFTIME   =  0.0      ,  1000000.0,
-  RTIMEE   =  1000000.0,
-  RTIMES   =  0.0      ,
  &END
 
 
@@ -455,18 +383,6 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &QLK_TCI
-  iqlk_set =  1        ,
-  qlk_ETG  =  1        ,
-  qlk_ETGmult=  0.33     ,
-  qlk_coll_flag=  1        ,
-  qlk_gammaEmult=  1.0      ,
-  qlk_gradumult=  1.0      ,
-  qlk_kin_elec=  1        ,
-  qlk_machmult=  1.0      ,
-  qlk_rhomax=  0.95     ,
-  qlk_rhomin=  0.03     ,
-  qlk_rot_flag=  0        ,
-  qlk_usenn=  0        ,
  &END
 
 
@@ -483,16 +399,18 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &IMAS
+  IDSCOREPROFIN_ANGF=  1        ,
   IDSCOREPROFIN_NE=  1        ,
   IDSCOREPROFIN_Q=  1        ,
   IDSCOREPROFIN_TE=  1        ,
   IDSCOREPROFIN_TI=  1        ,
   IDSCOREPROFIN_ZEFF=  1        ,
-  IDSCORESOURCEIN_ECRH=  1        ,
-  IDSCORESOURCEIN_RAD=  1        ,
   IDSCORETRANSPIN=  0        ,
+  IDSEQUILIN_CURRBNDCOND=  1        ,
   IDSEQUILIN_PSIRMSDEV=  0        ,
-  IDSSLICEUPDATEDT=  0.1      ,
+  IDSPULSESCHEDIN_BT=  1        ,
+  IDSPULSESCHEDIN_IPL=  1        ,
+  IDSSLICEUPDATEDT=  1.0      ,
   IDSSUMMARYIN=  0        ,
  &END
 
