Add ruff as linter and import sorter

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,7 +66,7 @@ develop =
     # deployment
     bump2version
     # linting
-    isort
+    ruff
     pre-commit
     yapf
     mypy
@@ -121,10 +121,6 @@ ignore_missing_imports = True
 
 [mypy-pkg_resources.*]
 ignore_missing_imports = True
-
-[flake8]
-exclude = scripts
-max-line-length = 96
 
 [yapf]
 blank_line_before_nested_class_or_def = True
