--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.7'
+          python-version: '3.9'
 
       - name: Install additional dependencies
         run: |
-          pip install flake8
+          pip install ruff
 
       - name: Check code style
         run: |
-          flake8
+          ruff src/duqtools tests
