--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,52 @@ build-backend = "setuptools.build_meta"
 
 [tool.ruff]
 # Enable Pyflakes `E` and `F` codes by default.
-select = ["E", "F", "I"]
+select = [
+	"F",  # Pyflakes
+	"E",  # pycodestyle (error)
+	"W",    # pycodestyle (warning)
+	# "C90",  # mccabe
+	"I",    # isort
+	# "N",    # pep8-naming
+	# "D",    # pydocstyle
+	# "UP",   # pyupgrade
+	# "YTT",  # flake8-2020
+	# "ANN",  # flake8-annotations
+	# "S",    # flake8-bandit
+	# "BLE",  # flake8-blind-except
+	# "FBT",  # flake8-boolean-trap
+	# "B",    # flake8-bugbear
+	# "A",    # flake8-builtins
+	# "COM",  # flake8-commas
+	# "C4",   # flake8-comprehensions
+	# "DTZ",  # flake8-datetimez
+	# "T10",  # flake8-debugger
+	# "EM",   # flake8-errmsg
+	# "EXE",  # flake8-executable
+	# "ISC",  # flake8-implicit-str-concat
+	# "ICN",  # flake8-import-conventions
+	# "G",    # flake8-logging-format
+	# "INP",  # flake8-no-pep420
+	# "PIE",  # flake8-pie
+	# "T20",  # flake8-print
+	# "PT",   # flake8-pytest-style
+	# "Q",    # flake8-quotes
+	# "RET",  # flake8-return
+	# "SIM",  # flake8-simplify
+	# "TID",  # flake8-tidy-imports
+	# "TCH",  # flake8-type-checking
+	# "ARG",  # flake8-unused-arguments
+	# "PTH",  # flake8-use-pathlib
+	# "ERA",  # eradicate
+	# "PD",   # pandas-vet
+	# "PGH",  # pygrep-hooks
+	# "PL",   # Pylint
+	# "PLC",  # Convention
+	# "PLE",  # Error
+	# "PLR",  # Refactor
+	# "PLW",  # Warning
+	# "TRY",  # tryceratops
+]
 ignore = []
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
