--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     hooks:
       - id: nbcheckorder
   - repo: https://github.com/PyCQA/isort
-    rev: '5.11.4'
+    rev: '5.12.0'
     hooks:
       - id: isort
   - repo: https://github.com/pre-commit/mirrors-yapf
@@ -34,7 +34,7 @@ repos:
         additional_dependencies:
           - toml
   - repo: https://github.com/myint/docformatter
-    rev: 'v1.5.0'
+    rev: 'v1.6.0.rc1'
     hooks:
       - id: docformatter
   - repo: https://github.com/PyCQA/flake8
