Implementation for jintrac v220922 (#487)
* Add v210921 / v220922 systems
* Implement data creation for v220922
* Refactor code to make both systems work
* Update tests to work with v210921 / v220922
* Update test paths to run as non-root user
* Add `importorskip` instruction to cmdline test to skip when imas cannot be imported
* Factor out run number tracking in `duqduq setup`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
         additional_dependencies:
           - toml
   - repo: https://github.com/myint/docformatter
-    rev: 'v1.5.0'
+    rev: 'v1.6.0.rc1'
     hooks:
       - id: docformatter
   - repo: https://github.com/charliermarsh/ruff-pre-commit
