--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,3 +49,35 @@ jobs:
 
       - name: Test with pytest
         run: coverage run -p -m pytest
+
+  docs:
+    name: Test Docs
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
+    strategy:
+      matrix:
+        python-version: ['3.9']
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.pythonLocation }}
+          key: docs-${{ env.pythonLocation }}-${{ hashFiles('setup.cfg') }}
+
+      - name: Python info
+        run: |
+          which python
+          python --version
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -e .[docs]
+
+      - name: Test making docs
+        run: mkdocs build
