Update variable locations

--- a/src/duqtools/data/variables.yaml
+++ b/src/duqtools/data/variables.yaml
@@ -1,5 +1,7 @@
 ### Jetto/other variables
 
+- name: t_start
+- name: t_end
 - name: major_radius
   type: jetto-variable
   lookup:
@@ -12,5 +14,15 @@
       section: NLIST1
     name: major_radius
     type: float
-- name: t_start
-- name: t_end
+- name: b_field
+  type: jetto-variable
+  lookup:
+    doc: B-field (B0)
+    keys:
+    - field: EquilEscoRefPanel.BField.ConstValue
+      file: jetto.jset
+    # - field: ???
+    #   file: jetto.in
+    #   section: NLIST1
+    name: b_field
+    type: float
