Implement solution for t_start

--- a/src/duqtools/data/variables_ids2jetto.yaml
+++ b/src/duqtools/data/variables_ids2jetto.yaml
@@ -5,6 +5,8 @@
   paths:
     - ids: equilibrium
       path: time/0
+    - ids: core_profiles
+      path: time/0
   default: null  # raise if None
 
 - name: ids-b_field
