--- a/src/duqtools/data/variables_ids2jetto.yaml
+++ b/src/duqtools/data/variables_ids2jetto.yaml
@@ -20,7 +20,7 @@
     - operator: ne
       args: [0]
     - operator: lt
-      args: [1e40]
+      args: [1.0e+40]
   default: null  # raise if None
 
 - name: ids-major_radius
@@ -34,5 +34,5 @@
     - operator: ne
       args: [0]
     - operator: lt
-      args: [1e40]
+      args: [1.0e+40]
   default: null  # raise if None
