--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,11 +3,11 @@ name: Publish on PyPI
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  fix_release_deps:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
@@ -17,11 +17,42 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install build setuptools wheel
-        python -m build --no-isolation
+        python -m pip install pyreqs
+        python -m pip install .
 
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_TOKEN }}
+    - name: Create requirements files
+        python -m pip freeze > requirements_full.txt
+        pyreqs . --print > requirements.txt
+
+    - name: Push back requirement files
+      run: |
+          git config --global user.name 'Github Action (publish.yaml)'
+          git config --global user.email 'victor@lipsum.eu'
+          git add requirements_full.txt requirements.txt
+          git commit -m "Added requirements.txt files"
+          git push
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Testing
+      run: |
+        git log
+        git show
+#   - uses: actions/setup-python@v4
+#     with:
+#       python-version: '3.9'
+
+#   - name: Install dependencies
+#     run: |
+#       python -m pip install --upgrade pip
+#       python -m pip install build setuptools wheel
+#       python -m build --no-isolation
+
+#   - name: Publish package
+#     uses: pypa/gh-action-pypi-publish@master
+#     with:
+#       user: __token__
+#       password: ${{ secrets.PYPI_TOKEN }}
