--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,9 +3,41 @@ name: Publish on PyPI
 on:
   release:
     types: [published]
+  workflow_dispatch:
+
 
 jobs:
+  fix_release_deps:
+    permissions: write-all
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pipreqs
+        python -m pip install .
+
+    - name: Create requirements files
+      run: |
+        python -m pip freeze > requirements_full.txt
+        pipreqs . --print > requirements.txt
+
+    - name: Push back requirement files
+      run: |
+          git config --global user.name 'Github Action (publish.yaml)'
+          git config --global user.email 'victor@lipsum.eu'
+          git add requirements_full.txt requirements.txt
+          git commit -m "Added requirements.txt files"
+          git tag --force $GITHUB_REF_NAME HEAD
+          git push --force --tags
+
   deploy:
+    needs: fix_release_deps
     runs-on: ubuntu-latest
 
     steps:
