--- a/tests/test_data/config_jetto.yaml
+++ b/tests/test_data/config_jetto.yaml
@@ -19,7 +19,7 @@ create:
     n_samples: 3
   data:
     user: public
-    imasdb: jet
+    imasdb: test
     run_in_start_at: 7000
     run_out_start_at: 8000
   template: ./template_model
