Remove capitalization from name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: dUQtools
+site_name: duqtools
 site_url: https://duqtools.readthedocs.io
 repo_url: https://github.com/duqtools/duqtools
 repo_name: GitHub
