--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
     - examples/xarray-2D.ipynb
     - examples/xarray-ions.ipynb
     - examples/demo_single_run.ipynb
+    - examples/demo_lsv_run.ipynb
   - Scripts:
     - Overview: scripts/index.md
     - scripts/modify_imas_data.md
