Add all notebooks to index

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,8 @@ nav:
     - examples/xarray-ions.ipynb
     - examples/demo_single_run.ipynb
     - examples/demo_lsv_run.ipynb
+    - examples/duqtools_on_prominence.ipynb
+    - examples/duqtools_in_docker.ipynb
   - Scripts:
     - Overview: scripts/index.md
     - scripts/modify_imas_data.md
