fixed scipy to minial version 1.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     pandas
     pydantic
     pydantic-yaml
-    scipy
+    scipy >= 1.10
     tqdm
     xarray
     jetto-tools >= 1.8.8
