--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ install_requires =
     importlib_resources;python_version<'3.10'
     numpy
     pandas
-    pydantic
+    pydantic == 1.10.2
     pydantic-yaml
     scipy
     tqdm
