--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     pandas
     pydantic
     pydantic-yaml
-    scipy
+    scipy >= 1.09
     tqdm
     xarray
     jetto-tools >= 1.8.8
