--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ install_requires =
     importlib_resources;python_version<'3.10'
     numpy
     pandas
-    pydantic
+    pydantic !=1.10.3, !=1.10.4, !=1.10.5
     pydantic-yaml
     scipy >= 1.09
     tqdm
