Fix dependencies and add jinja2 requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ install_requires =
     altair
     click
     gitpython
-    jinja2
+    jinja2 >= 3.0
     # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
     # Note that the 3.9 stdlib implementation for `importlib.resources.files` fails with our case
     importlib_resources;python_version<'3.10'
