--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -30,11 +30,15 @@ jobs:
 
       - name: Download data-dictionary
         run: |
-          git clone https://smeetss:${{ secrets.GIT_ITER_ORG_HTTPS_KEY }}@git.iter.org/scm/imas/data-dictionary.git imas/data-dictionary
+          username="smeetss"
+          password="${{ secrets.GIT_ITER_ORG_HTTPS_KEY }}""
+          git clone https://$username:$password@git.iter.org/scm/imas/data-dictionary.git imas/data-dictionary
 
       - name: Download access-layer
         run: |
-          git clone https://smeetss:${{ secrets.GIT_ITER_ORG_HTTPS_KEY }}@git.iter.org/scm/imas/access-layer.git imas/access-layer
+          username=smeetss
+          password=${{ secrets.GIT_ITER_ORG_HTTPS_KEY }}
+          git clone https://$username:$password@it.iter.org/scm/imas/access-layer.git imas/access-layer
 
       - name: Download saxon9he.jar
         run: |
