--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -28,6 +28,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install libraries
+        run: |
+          sudo apt-get install -y xlstproc
+
       - name: Download data-dictionary
         run: |
           username="smeetss"
