Print pip debug info

--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -72,4 +72,9 @@ jobs:
 
       - name: Test imas import
         run: |
+          pip freeze
+          pip show imas
+
+      - name: Test imas import
+        run: |
           python -c 'import imas'
