--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -4,11 +4,11 @@ on:
   pull_request:
     branches:
       - main
-    # types:
-    #   - opened
-    #   - reopened
-    #   - synchronize
-    #   - ready_for_review
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   push:
     branches:
       - main
@@ -16,7 +16,7 @@ on:
 
 jobs:
   test2:
-    # if: github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false
     name: ${{ matrix.os }}, ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
