--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,3 +42,10 @@ repos:
     rev: 'v1.1.1'
     hooks:
       - id: mypy
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.7.0
+    hooks:
+      - id: nbqa-yapf
+        additional_dependencies: [toml, yapf]
+      - id: nbqa-ruff
+        args: [--fix]
