--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,22 +24,22 @@ repos:
     hooks:
       - id: nbcheckorder
   - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: 'v0.32.0'
+    rev: v0.32.0
     hooks:
       - id: yapf
         additional_dependencies:
           - toml
   - repo: https://github.com/myint/docformatter
-    rev: 'v1.5.0'
+    rev: v1.5.0
     hooks:
       - id: docformatter
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.259'
+    rev: v0.0.261
     hooks:
       - id: ruff
         args: [--fix]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.1.1'
+    rev: v1.2.0
     hooks:
       - id: mypy
   - repo: https://github.com/nbQA-dev/nbQA
